--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Shareholding.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Shareholding.cshtml
@@ -293,6 +293,7 @@
                     $('[data-chart="so1"]').find('.c-chartBox, .l-dataNotes').removeClass('u-hidden');
 
                     chart.yAxis[0].update({
+                        tickInterval: 10,
                         max: data[0].Percentage > 50 ? 100 : 50
                     });
                     chart.update({
