--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -56,9 +56,10 @@
                                     <ul class="l-tag">
                                         @foreach (var item in Model.TagsDic[FundTagEnum.DiscountTag])
                                         {
-                                            <li class="l-tag__item">
-                                                <a href="#" class="o-tag">@item</a>
-                                            </li>
+                                        <li class="l-tag__item">
+                                            @item
+                                            <span class="o-tag">@item</span>
+                                        </li>
                                         }
                                     </ul>
                                 </div>
@@ -3764,6 +3765,7 @@
                     $('[data-chart="so1"]').find('.c-empty').addClass('u-hidden');
                     $('[data-chart="so1"]').find('.c-chartBox, .l-dataNotes').removeClass('u-hidden');
                     chart.yAxis[0].update({
+                        tickInterval: 10,
                         max: data[0].Holding > 50 ? 100 : 50
                     });
                     chart.update({
